@@ -1,6 +1,7 @@
 # Build 5.9.8 Release ?
   1. New skills: Informant, AutoSwipe
   2. New wainwrighting & smelting recipes
+  3. Longlook to mobs now shows interesting body part info.
 
 # Build 5.9.7 Release 08/29/2018
    1. Scholars gain XP from visiting bookstores, and can study dissertations.
